bitflow-query-language/generated/java/bitflow4j/steps/query/generated/BitflowQueryParser.java
// Generated from BitflowQuery.g4 by ANTLR 4.7.1
package bitflow4j.steps.query.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BitflowQueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, SELECTKEYWORD=16, 
		WHEREKEYWORD=17, WINDOWKEYWORD=18, GROUPBYKEYWORD=19, HAVINGKEYWORD=20, 
		ALLWORD=21, ASWORD=22, SUMKEYWORD=23, MINKEYWORD=24, MAXKEYWORD=25, AVGKEYWORD=26, 
		MEDIANWORD=27, COUNTWORD=28, TAGWORD=29, FILEWORD=30, INWORD=31, PLUS=32, 
		MINUS=33, TIMES=34, DIVIDED=35, LPAREN=36, RPAREN=37, AND=38, OR=39, NOT=40, 
		TRUE=41, FALSE=42, GT=43, GE=44, LT=45, LE=46, EQ=47, NUMBER=48, STRING=49, 
		DECITIMES=50, IDENTIFIER=51, WS=52;
	public static final int
		RULE_parse = 0, RULE_aggregateSelections = 1, RULE_selectAll = 2, RULE_selectElement = 3, 
		RULE_selectDefault = 4, RULE_mathematicalSelection = 5, RULE_leftParen = 6, 
		RULE_rightParen = 7, RULE_selectFunction = 8, RULE_selectSum = 9, RULE_selectMin = 10, 
		RULE_selectMax = 11, RULE_selectAvg = 12, RULE_selectMedian = 13, RULE_selectCount = 14, 
		RULE_countTag = 15, RULE_countNorTIMES = 16, RULE_groupByFunction = 17, 
		RULE_whereFunction = 18, RULE_havingFunction = 19, RULE_windowFunction = 20, 
		RULE_windowmode = 21, RULE_allMode = 22, RULE_timeMode = 23, RULE_valueMode = 24, 
		RULE_tag = 25, RULE_days = 26, RULE_hours = 27, RULE_minutes = 28, RULE_seconds = 29, 
		RULE_expression = 30, RULE_inexpressiontag = 31, RULE_inexpressionmetric = 32, 
		RULE_hastag = 33, RULE_notnode = 34, RULE_endnode = 35, RULE_comparator = 36, 
		RULE_binary = 37, RULE_mathematicalOperation = 38, RULE_boolToken = 39, 
		RULE_list = 40;
	public static final String[] ruleNames = {
		"parse", "aggregateSelections", "selectAll", "selectElement", "selectDefault", 
		"mathematicalSelection", "leftParen", "rightParen", "selectFunction", 
		"selectSum", "selectMin", "selectMax", "selectAvg", "selectMedian", "selectCount", 
		"countTag", "countNorTIMES", "groupByFunction", "whereFunction", "havingFunction", 
		"windowFunction", "windowmode", "allMode", "timeMode", "valueMode", "tag", 
		"days", "hours", "minutes", "seconds", "expression", "inexpressiontag", 
		"inexpressionmetric", "hastag", "notnode", "endnode", "comparator", "binary", 
		"mathematicalOperation", "boolToken", "list"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "', '", "','", "'*)'", "'d'", "'D'", "'h'", "'H'", "'m'", "'M'", 
		"'s'", "'S'", "'{'", "'}'", "') = \"'", "'\"'", null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"'+'", "'-'", "'*'", "'/'", "'('", "')'", null, null, null, null, null, 
		"'>'", "'>='", "'<'", "'<='", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "SELECTKEYWORD", "WHEREKEYWORD", "WINDOWKEYWORD", 
		"GROUPBYKEYWORD", "HAVINGKEYWORD", "ALLWORD", "ASWORD", "SUMKEYWORD", 
		"MINKEYWORD", "MAXKEYWORD", "AVGKEYWORD", "MEDIANWORD", "COUNTWORD", "TAGWORD", 
		"FILEWORD", "INWORD", "PLUS", "MINUS", "TIMES", "DIVIDED", "LPAREN", "RPAREN", 
		"AND", "OR", "NOT", "TRUE", "FALSE", "GT", "GE", "LT", "LE", "EQ", "NUMBER", 
		"STRING", "DECITIMES", "IDENTIFIER", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BitflowQuery.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BitflowQueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public AggregateSelectionsContext aggregateSelections() {
			return getRuleContext(AggregateSelectionsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(BitflowQueryParser.EOF, 0); }
		public WhereFunctionContext whereFunction() {
			return getRuleContext(WhereFunctionContext.class,0);
		}
		public GroupByFunctionContext groupByFunction() {
			return getRuleContext(GroupByFunctionContext.class,0);
		}
		public WindowFunctionContext windowFunction() {
			return getRuleContext(WindowFunctionContext.class,0);
		}
		public HavingFunctionContext havingFunction() {
			return getRuleContext(HavingFunctionContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BitflowQueryVisitor ) return ((BitflowQueryVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			aggregateSelections();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHEREKEYWORD) {
				{
				setState(83);
				whereFunction();
				}
			}

			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==GROUPBYKEYWORD) {
				{
				setState(86);
				groupByFunction();
				}
			}

			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WINDOWKEYWORD) {
				{
				setState(89);
				windowFunction();
				}
			}

			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HAVINGKEYWORD) {
				{
				setState(92);
				havingFunction();
				}
			}

			setState(95);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AggregateSelectionsContext extends ParserRuleContext {
		public TerminalNode SELECTKEYWORD() { return getToken(BitflowQueryParser.SELECTKEYWORD, 0); }
		public SelectAllContext selectAll() {
			return getRuleContext(SelectAllContext.class,0);
		}
		public List<SelectElementContext> selectElement() {
			return getRuleContexts(SelectElementContext.class);
		}
		public SelectElementContext selectElement(int i) {
			return getRuleContext(SelectElementContext.class,i);
		}
		public AggregateSelectionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggregateSelections; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).enterAggregateSelections(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).exitAggregateSelections(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BitflowQueryVisitor ) return ((BitflowQueryVisitor<? extends T>)visitor).visitAggregateSelections(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AggregateSelectionsContext aggregateSelections() throws RecognitionException {
		AggregateSelectionsContext _localctx = new AggregateSelectionsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_aggregateSelections);
		try {
			int _alt;
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(SELECTKEYWORD);
				setState(98);
				selectAll();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(SELECTKEYWORD);
				setState(105);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(100);
						selectElement();
						setState(101);
						match(T__0);
						}
						} 
					}
					setState(107);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				}
				setState(108);
				selectElement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectAllContext extends ParserRuleContext {
		public TerminalNode ALLWORD() { return getToken(BitflowQueryParser.ALLWORD, 0); }
		public SelectAllContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectAll; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).enterSelectAll(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).exitSelectAll(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BitflowQueryVisitor ) return ((BitflowQueryVisitor<? extends T>)visitor).visitSelectAll(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectAllContext selectAll() throws RecognitionException {
		SelectAllContext _localctx = new SelectAllContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_selectAll);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_la = _input.LA(1);
			if ( !(_la==ALLWORD || _la==TIMES) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectElementContext extends ParserRuleContext {
		public MathematicalSelectionContext mathematicalSelection() {
			return getRuleContext(MathematicalSelectionContext.class,0);
		}
		public TerminalNode ASWORD() { return getToken(BitflowQueryParser.ASWORD, 0); }
		public TerminalNode STRING() { return getToken(BitflowQueryParser.STRING, 0); }
		public SelectFunctionContext selectFunction() {
			return getRuleContext(SelectFunctionContext.class,0);
		}
		public SelectDefaultContext selectDefault() {
			return getRuleContext(SelectDefaultContext.class,0);
		}
		public SelectElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectElement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).enterSelectElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).exitSelectElement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BitflowQueryVisitor ) return ((BitflowQueryVisitor<? extends T>)visitor).visitSelectElement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectElementContext selectElement() throws RecognitionException {
		SelectElementContext _localctx = new SelectElementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectElement);
		try {
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				mathematicalSelection(0);
				setState(114);
				match(ASWORD);
				setState(115);
				match(STRING);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				mathematicalSelection(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				selectFunction();
				setState(119);
				match(ASWORD);
				setState(120);
				match(STRING);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(122);
				selectFunction();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(123);
				selectDefault();
				setState(124);
				match(ASWORD);
				setState(125);
				match(STRING);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(127);
				selectDefault();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectDefaultContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(BitflowQueryParser.STRING, 0); }
		public TerminalNode DECITIMES() { return getToken(BitflowQueryParser.DECITIMES, 0); }
		public TerminalNode NUMBER() { return getToken(BitflowQueryParser.NUMBER, 0); }
		public SelectDefaultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectDefault; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).enterSelectDefault(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).exitSelectDefault(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BitflowQueryVisitor ) return ((BitflowQueryVisitor<? extends T>)visitor).visitSelectDefault(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectDefaultContext selectDefault() throws RecognitionException {
		SelectDefaultContext _localctx = new SelectDefaultContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_selectDefault);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << STRING) | (1L << DECITIMES))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MathematicalSelectionContext extends ParserRuleContext {
		public LeftParenContext leftParen() {
			return getRuleContext(LeftParenContext.class,0);
		}
		public List<MathematicalSelectionContext> mathematicalSelection() {
			return getRuleContexts(MathematicalSelectionContext.class);
		}
		public MathematicalSelectionContext mathematicalSelection(int i) {
			return getRuleContext(MathematicalSelectionContext.class,i);
		}
		public RightParenContext rightParen() {
			return getRuleContext(RightParenContext.class,0);
		}
		public SelectFunctionContext selectFunction() {
			return getRuleContext(SelectFunctionContext.class,0);
		}
		public SelectDefaultContext selectDefault() {
			return getRuleContext(SelectDefaultContext.class,0);
		}
		public MathematicalOperationContext mathematicalOperation() {
			return getRuleContext(MathematicalOperationContext.class,0);
		}
		public MathematicalSelectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mathematicalSelection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).enterMathematicalSelection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).exitMathematicalSelection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BitflowQueryVisitor ) return ((BitflowQueryVisitor<? extends T>)visitor).visitMathematicalSelection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MathematicalSelectionContext mathematicalSelection() throws RecognitionException {
		return mathematicalSelection(0);
	}

	private MathematicalSelectionContext mathematicalSelection(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MathematicalSelectionContext _localctx = new MathematicalSelectionContext(_ctx, _parentState);
		MathematicalSelectionContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_mathematicalSelection, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
				{
				setState(133);
				leftParen();
				setState(134);
				mathematicalSelection(0);
				setState(135);
				rightParen();
				}
				break;
			case SUMKEYWORD:
			case MINKEYWORD:
			case MAXKEYWORD:
			case AVGKEYWORD:
			case MEDIANWORD:
			case COUNTWORD:
				{
				setState(137);
				selectFunction();
				}
				break;
			case NUMBER:
			case STRING:
			case DECITIMES:
				{
				setState(138);
				selectDefault();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(147);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new MathematicalSelectionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_mathematicalSelection);
					setState(141);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(142);
					mathematicalOperation();
					setState(143);
					mathematicalSelection(4);
					}
					} 
				}
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LeftParenContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(BitflowQueryParser.LPAREN, 0); }
		public LeftParenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftParen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).enterLeftParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).exitLeftParen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BitflowQueryVisitor ) return ((BitflowQueryVisitor<? extends T>)visitor).visitLeftParen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LeftParenContext leftParen() throws RecognitionException {
		LeftParenContext _localctx = new LeftParenContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_leftParen);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(LPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightParenContext extends ParserRuleContext {
		public TerminalNode RPAREN() { return getToken(BitflowQueryParser.RPAREN, 0); }
		public RightParenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightParen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).enterRightParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).exitRightParen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BitflowQueryVisitor ) return ((BitflowQueryVisitor<? extends T>)visitor).visitRightParen(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RightParenContext rightParen() throws RecognitionException {
		RightParenContext _localctx = new RightParenContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rightParen);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectFunctionContext extends ParserRuleContext {
		public SelectSumContext selectSum() {
			return getRuleContext(SelectSumContext.class,0);
		}
		public SelectMinContext selectMin() {
			return getRuleContext(SelectMinContext.class,0);
		}
		public SelectMaxContext selectMax() {
			return getRuleContext(SelectMaxContext.class,0);
		}
		public SelectAvgContext selectAvg() {
			return getRuleContext(SelectAvgContext.class,0);
		}
		public SelectMedianContext selectMedian() {
			return getRuleContext(SelectMedianContext.class,0);
		}
		public SelectCountContext selectCount() {
			return getRuleContext(SelectCountContext.class,0);
		}
		public SelectFunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectFunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).enterSelectFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).exitSelectFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BitflowQueryVisitor ) return ((BitflowQueryVisitor<? extends T>)visitor).visitSelectFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectFunctionContext selectFunction() throws RecognitionException {
		SelectFunctionContext _localctx = new SelectFunctionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_selectFunction);
		try {
			setState(160);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SUMKEYWORD:
				enterOuterAlt(_localctx, 1);
				{
				setState(154);
				selectSum();
				}
				break;
			case MINKEYWORD:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				selectMin();
				}
				break;
			case MAXKEYWORD:
				enterOuterAlt(_localctx, 3);
				{
				setState(156);
				selectMax();
				}
				break;
			case AVGKEYWORD:
				enterOuterAlt(_localctx, 4);
				{
				setState(157);
				selectAvg();
				}
				break;
			case MEDIANWORD:
				enterOuterAlt(_localctx, 5);
				{
				setState(158);
				selectMedian();
				}
				break;
			case COUNTWORD:
				enterOuterAlt(_localctx, 6);
				{
				setState(159);
				selectCount();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectSumContext extends ParserRuleContext {
		public TerminalNode SUMKEYWORD() { return getToken(BitflowQueryParser.SUMKEYWORD, 0); }
		public TerminalNode STRING() { return getToken(BitflowQueryParser.STRING, 0); }
		public SelectSumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectSum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).enterSelectSum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BitflowQueryListener ) ((BitflowQueryListener)listener).exitSelectSum(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BitflowQueryVisitor ) return ((BitflowQueryVisitor<? extends T>)visitor).visitSelectSum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectSumContext selectSum() throws RecognitionException {
		SelectSumContext _localctx = new SelectSumContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_selectSum);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(SUMKEYWORD);
			setState(163);
			match(STRING);
			setState(164);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
